baml_language/crates/baml_tests/snapshots/parser_speculative/baml_tests__parser_speculative__02_parser__ambiguous_function.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Ambiguous"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "input"
        TYPE_EXPR " string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR " {"
        L_BRACE "{"
  CLIENT_DEF "
  client GPT4"
    KW_CLIENT "client"
    WORD "GPT4"
  R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AnotherLLM"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "input"
        TYPE_EXPR " string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        WORD "clent"
        WORD "GPT4"
        WORD "prompt"
        STRING_LITERAL " "Process: {{ input }}""
          QUOTE """
          WORD "Process"
          COLON ":"
          L_BRACE "{"
          L_BRACE "{"
          WORD "input"
          R_BRACE "}"
          R_BRACE "}"
          QUOTE """
        R_BRACE "}"

=== ERRORS ===
Error: Expected RBrace, found Client
   ╭─[ 0:3:3 ]
   │
 3 │   client GPT4  // This keyword determines it's an LLM function
   │   ───┬──  
   │      ╰──── Expected RBrace, found Client
───╯

Error: Expected config block, found RBrace
   ╭─[ 0:5:1 ]
   │
 5 │ }
   │ ┬  
   │ ╰── Expected config block, found RBrace
───╯

Error: Expected top-level declaration, found RBrace
   ╭─[ 0:5:1 ]
   │
 5 │ }
   │ ┬  
   │ ╰── Expected top-level declaration, found RBrace
───╯
